@@ -114,15 +114,16 @@ DIST gcc-4.4.2-patches-1.0.tar.bz2 11040 RMD160 008701ce22ef001049871824528d193f
 DIST gcc-4.4.2-uclibc-patches-1.0.tar.bz2 2290 RMD160 23e52f8bdfb99c9b2af594ebde039ff6f2bd9291 SHA1 03759cce56a7f81f0c4b47b0309bfa9c785d8ea4 SHA256 d380566d5aa3c91820013fc5745b101824940cd5f553a33723c704dc3a066144
 DIST gcc-4.4.2.tar.bz2 62919816 RMD160 25014a64d148005868449dfebf91a734d6322227 SHA1 6cf7d9204ff3e1a09f4f12b1372cd4129ab7f080 SHA256 1126b6a7b585b3a178bfb7d559221779eb7eba12ce01bc9ca5896f6f9ee639de
 DIST gcc-4.4.3-patches-1.2.tar.bz2 12802 RMD160 4fed8dfde025fb397c29d11359c6583c40c8e217 SHA1 226ae5c9e177ac18b2a0f76c84233b33707f619b SHA256 d59016edf9c0d1f7158928ac5c29196af96ed34de17f9b0cefb5087faed3d6db
+DIST gcc-4.4.3-patches-1.3.tar.bz2 14415 RMD160 e6914430b3fe90960c7bcc6246d0901622c2113d SHA1 ad4c47904bdcfc36b07f5a7f1759ba7767845322 SHA256 ef828bb3409436ee1470cab06a443f139ed785a4134155ebdcdc6e9ac3fbeac2
 DIST gcc-4.4.3-piepatches-v0.4.5.tar.bz2 16946 RMD160 a0df02c15ab5436cb270f1b41227b5722dcfcc53 SHA1 355d1fa866e7bde03191d0416b3524696e0c98c6 SHA256 ac853b06d4189dfba1bf72c8565d9ebf893b83cb690377db947cf5a48c802dc4
 DIST gcc-4.4.3-specs-0.2.0.tar.bz2 2004 RMD160 0a013f95029a170eeea3cb6ccbfd65f64b66f465 SHA1 61bd3c13400772ec4d5d4fcee297e3d86adbd065 SHA256 f6c7cb99beead66dd4d06f7004c5731a9360330cbe878ce79792c618e008eed2
 DIST gcc-4.4.3-uclibc-patches-1.0.tar.bz2 3014 RMD160 4646449073c54a43f1b72382ab3c611789e6cb59 SHA1 7bb2d5ae871f1bbed51198c274518d2c8bc06689 SHA256 4b44eb274f27cc8ffb0e61e90d829a7a87fd0b49df6f31e7cb3071cc96c00df1
 DIST gcc-4.4.3.tar.bz2 62944934 RMD160 b51afac3cb77ee3dc09d29c2f85936482ed82ab2 SHA1 619766282734728539ce58a5c383cb371f1999c7 SHA256 97ed664694b02b4d58ac2cafe443d02a388f9cb3645e7778843b5086a5fec040
-DIST gcc-4.4.4-patches-1.0.tar.bz2 16573 RMD160 b36bb4074b25a09efda5466d296c0b3a5327bbcc SHA1 7cb7d9b2f8a6a46992e83aad4b967b150d01fbf2 SHA256 0fc84cba653ebb2638b1b6668e80fdf8d835e47fbe6a44fa53905706f3a83164
+DIST gcc-4.4.4-patches-1.1.tar.bz2 17372 RMD160 7f3be16c0fb947348e5110b2ea02b11a52549c78 SHA1 97a856cc95b2fff41b9b45ed44fcaf7fc101ae5a SHA256 2fa472aa08355eea3801d8513c21c86a5ac9974b793811c00bc87a557a936bff
 DIST gcc-4.4.4-piepatches-v0.4.5.tar.bz2 16987 RMD160 8fda3d41b47b7c5679e2935e0380f8582b6b7591 SHA1 971203b908eb32875163386ca97e6ff94291323f SHA256 78fa1ecf4cd9abe45a68cdfad4cbd1ad92acde0c4e7ca4dd8403f7e5bd41c0cd
 DIST gcc-4.4.4-uclibc-patches-1.0.tar.bz2 3014 RMD160 f849627745442bd3885dc7892aac0b22a5b6397c SHA1 6807f546676ac608100eb0de5b67e42af90b6d4c SHA256 40bfd13b132567dca198d815a602d2cfb49046a22425450eb3db67ed280feaea
 DIST gcc-4.4.4.tar.bz2 63018867 RMD160 b41f26be28cc1ef643135230dfa94876d8a02dd6 SHA1 45d1e7242a08cbb7a343ed2bf640a5afd0ebe098 SHA256 e1c13696b45752ad3f652304fab5120a43a8a5c0f438d3bda78cf16b620c0c58
-DIST gcc-4.5.0-patches-1.3.tar.bz2 10012 RMD160 b22cc8ed2a1d49a8ceb881df403fc1b061c733be SHA1 3f30e2dac38c5708800b4b5ad5200250fba07fb2 SHA256 f38ec69ce0f97644b17649466dbd15681d74b6c3b22b6e57bc24058d433b2718
+DIST gcc-4.5.0-patches-1.4.tar.bz2 15253 RMD160 d98dfed01434714b58dd61e87f4c555a86ad201d SHA1 01effc910fe960b8a0a08f1ebe0abb3e89d629b6 SHA256 774aa3c491c979444ae0179cc37585c9bf37beaa6cdd78cf7e10f6d1c804ccbc
 DIST gcc-4.5.0-piepatches-v0.4.5.tar.bz2 14281 RMD160 ec9f3026b33e41f4297f390680c12b8debd5a426 SHA1 424837fbff9bef1a966b9df67662f372b4a488d4 SHA256 8526a33a4080b892dfefcb764062f6755da909034c05556f68acaa2b4a15a631
 DIST gcc-4.5.0-uclibc-patches-1.0.tar.bz2 2281 RMD160 860f77f9ae11f24a760cf763b9965ef64dd9d416 SHA1 ec67f80f0b5da78edbe6a85eb3b93090a628f535 SHA256 5faa9c4eac7c67afeae081a936dd6406f11a930c3c240a83d76ffdee74b04e6f
 DIST gcc-4.5.0.tar.bz2 65941778 RMD160 84c9b2bf117ce3e29cba8fa2cd62fa4f8f7f5749 SHA1 4beb8366ce1883f37255aa57f0258e7d3cd13a9b SHA256 8293e9efa68a8ec0fdd0dae9c9bd128a8e742566acd9c8fbcfe79d98ed3756c8
@@ -136,8 +137,8 @@ EBUILD gcc-4.3.3-r2.ebuild 5810 RMD160 b088abacc26bc73fa628ec0f3d98278126ffa6a1 
 EBUILD gcc-4.4.1.ebuild 8392 RMD160 cd01b36d83508001cdc8d2801ded6fd4a481fa42 SHA1 ae2af502b10db14925261f780cc3ee18b502c356 SHA256 5ba2904fc91d25fd1941561c48e0708131e254763a2689f1e16aa51da12eef50
 EBUILD gcc-4.4.2.ebuild 8491 RMD160 4ce5ee36da4f8523e2ca6351e07608af7f73f1b9 SHA1 30837d37c1e143c3608f8988f6d1aaf58a21b392 SHA256 1c4500963f146d702cbb6701a51b582efaa82d5afe849891ddc989e2bbd73e88
 EBUILD gcc-4.4.3-r2.ebuild 8600 RMD160 46f26e2c9ea1c22ba8787276fb58b04ca8c48162 SHA1 f97a07facb57cc3725e4eb62f0a92278cb8e3f91 SHA256 455726f8e3ebd6d66e0b3b15a56fc78e1898aa6682c491426841ad52fe4ea7bd
-EBUILD gcc-4.4.3-r3.ebuild 8469 RMD160 9dc6b4896f2cd1072e8175811ac7ab1fb16aee9e SHA1 822ce29566dbd97b134069099b8a12f32f252643 SHA256 0ca45b2adcd5e30030bb0fe458fcba90d5e090fa42770482182a155a9d51350d
-EBUILD gcc-4.4.4-r1.ebuild 8517 RMD160 7ef7cb63a9e6699f23e4fed9dec94de6ac887a5c SHA1 7c2cb6e7a34fad7fa34d270f782276690887cec0 SHA256 11fa6675ff4ae86003933f3ce8b7136ba0465deb4c496a7579e910dc6265520a
-EBUILD gcc-4.5.0.ebuild 7921 RMD160 2772639779c535e4d7d49a92600c4e99558bc457 SHA1 873efaef7bf9b8926050d55a1f78901fb136125c SHA256 d69ed7a26e172d1f973f52f87878cd27e0739539147961ac17a3a95cf541b082
-MISC ChangeLog 135144 RMD160 08c5a85cc80c8859a00c0cfe23bf2ead0f5a22f7 SHA1 981ea47f7781c1106163c6d1d5c58857ab8cf858 SHA256 252d53488cc88d5c12c9fa1343128babdf2c9f8164109715c91141cccddbb433
-MISC metadata.xml 1678 RMD160 7d8df302684ecf0e23caf763d3fcee267d40866b SHA1 f9a035b4a7bf8a6fbf9e1627f777b86f30813517 SHA256 3e67d554a8e3135943623ab276d6871582fda0cdb556d31531b369d8c0b277d7
+EBUILD gcc-4.4.3-r3.ebuild 8473 RMD160 a7066df7ffaa259999e502531aae76d40d1fbf0b SHA1 ee02e07b9ec55bf0334644e290e45018892572e7 SHA256 6091a1a8a01c7f4257e1564672f2450d5656ba2b87aff69b5b04c4ef57336469
+EBUILD gcc-4.4.4-r1.ebuild 8489 RMD160 85b16c701cf5224b27782eb7a32b08222884dbf9 SHA1 8202fb42c3a14ca09ba144d6dab2ab3c22dc17a4 SHA256 8685f1713259058b5fcc7c198bea7935800c832ac0323d19b92ff12703321b9a
+EBUILD gcc-4.5.0.ebuild 7924 RMD160 d9127550e00a2105f4ce4394be06ef553f033a12 SHA1 c1014fda12f172732c998b94a11233cd9eff8d1c SHA256 14e1871c493b3a34dee85bcce6aac600528f85aacea98b8075eeaebc89d77a7e
+MISC ChangeLog 135496 RMD160 d4aa23f97b0e51aeff667cfb7ea9e61c01b97a1f SHA1 e636c9bcef1a2d9b6054409e7f3d7f7d5af7f8f7 SHA256 108238099dee4df2168a9513bf8daeb47cab450216688d947ca6709286f8bc4f
+MISC metadata.xml 1719 RMD160 a078f92674a3f873d4bca4c4eb62278d4d39b13b SHA1 4a98a1912eda65c34cea05a78f6bbe997d8f9431 SHA256 b703f718353b58bcfdcdfbb60cce7c10a0711ab2578c43d9d4c61b250a6de936
